--- a/Project3_Main_File.Rmd
+++ b/Project3_Main_File.Rmd
@@ -21,6 +21,7 @@ library(rsample)
 library(naivebayes)
 library(MASS)
 library(ggcorrplot)
+library(Metrics)
 
 # Education levels from https://www.kaggle.com/datasets/alexteboul/diabetes-health-indicators-dataset/discussion/295407
 # 1 Never attended school or only kindergarten
@@ -147,11 +148,13 @@ diabetes_full <-
   Stroke = case_when(
     Stroke == 1 ~ "Yes",
     Stroke == 0 ~ "No"
-  ),
+  )
+  ,
   Diabetes_binary = case_when(
     Diabetes_binary == 1 ~ "Yes",
     Diabetes_binary == 0 ~ "No"
   )
+
 )
 # Subsetting the data down on param. of interest for particular analysis
 markdown_data <- diabetes_full %>% filter(Education == params$eduLevel)
@@ -168,6 +171,7 @@ markdown_data$Sex <- factor(markdown_data$Sex)
 markdown_data$Smoker <- factor(markdown_data$Smoker)
 markdown_data$Stroke <- factor(markdown_data$Stroke)
 markdown_data$Diabetes_binary <- factor(markdown_data$Diabetes_binary)
+
 
 ```
 
@@ -259,7 +263,7 @@ ggplot(markdown_data, aes(x=BMI, y=Veggies, col=Diabetes_binary)) +
 ```
 Finally, we can view a few count plots that explore Sex and Age across the dataset.
 
-```{r}
+```{r, warning = FALSE}
 
 ggplot(markdown_data, aes(x = Sex, col = Age)) +        
   geom_bar(position = "dodge", fill = "lightgray") +
@@ -322,7 +326,8 @@ Logistic Regression is primarily used in binary classification tasks where we ar
 We fit three models here. The first includes all the variables of interest. The second model removes diet items such as the Fruits and Veggies variables, along with the Stroke variable. The third model includes interaction terms between Age and Sex, Smoker and Stroke, and BMI and PhysActivity.
 
 ```{r}
-ctrl <- trainControl(method = "cv", classProbs = TRUE, number = 5, summaryFunction = mnLogLoss)
+# 5-fold cross-validation for each method using LogLoss as summary function
+ctrl <- trainControl(method = "cv", classProbs = TRUE ,number = 5, summaryFunction = mnLogLoss)
 
 # Model 1, all variables
 logistic_model_1 <- train(Diabetes_binary ~ HighBP + HighChol + BMI + PhysActivity + Fruits + Veggies + Sex + Age + Smoker + Stroke, data = train, method = "glm", family = "binomial", trControl = ctrl, metric = "logLoss")
@@ -378,6 +383,7 @@ logistic_model_2$results$logLoss
 LASSO regression stands for Least Absolute Shrinkage and Selection Operator. This method uses shrinkage methods in an attempt to improve predictions. Shrinkage is when values of data are shrunk towards some mean. The LASSO method estimates the regression coefficients by minimizing them for a lambda > 0. This is particularly used over regular logistic so that we can select models with fewer parameters as a simpler model with important variables is preferred over a complex model with large amount of variables.
 
 ```{r}
+# Training Lasso Model
 lasso_model <- train(Diabetes_binary ~ HighBP + HighChol + BMI + PhysActivity + Fruits + Veggies + Sex + Age + Smoker + Stroke, data = train, method = "glmnet", tuneGrid = expand.grid(alpha = 1, lambda = seq(0, 1, by = 0.1)), trControl = ctrl, metric = "logLoss")
 ```
 
@@ -387,6 +393,7 @@ lasso_model <- train(Diabetes_binary ~ HighBP + HighChol + BMI + PhysActivity + 
 A classification tree is used when our goal is to classify group membership, in this case, classify whether or not an individual has diabetes. Like any tree based method, a classification tree will split the predictor space into many regions and have different predictions for each region. The tree is split by minimizing the Gini Coefficient, a number that represents how well each node classifies. 
 
 ```{r}
+# Training Classification Tree Model
 classification_tree_model <- train(Diabetes_binary ~ HighBP + HighChol + BMI + PhysActivity + Fruits + Veggies + Sex + Age + Smoker + Stroke, data = train, method = "rpart", tuneGrid = expand.grid(cp = seq(0,1, by = 0.001)), trControl = ctrl, metric = "logLoss")
 ```
 
@@ -396,7 +403,8 @@ classification_tree_model <- train(Diabetes_binary ~ HighBP + HighChol + BMI + P
 A Random Forest creates multiple bagged trees then averages the results. For each tree a random subset of predictors is chosen to fit the tree. This way, a single strong predictor won't dominate the tree fits as it will be left out of some of the other trees by random chance. We might choose the Random Forest over the Classification Tree because the Random Forest is typically stronger in prediction. Due to averaging over a large number of tree fits the variance decreases and prediction improves.
 
 ```{r}
-random_forest_model <- train(Diabetes_binary ~ HighBP + HighChol + BMI + PhysActivity + Fruits + Veggies + Sex + Age + Smoker + Stroke, data = train, method = "rf", tuneGrid = expand.grid(mtry = 1:10), trControl = ctrl, metric = "logLoss")
+# Training Random Forest Model
+random_forest_model <- train(Diabetes_binary ~ HighBP + HighChol + BMI + PhysActivity + Fruits + Veggies + Sex + Age + Smoker + Stroke, data = train, method = "rf", tuneGrid = expand.grid(mtry = 1:5), trControl = ctrl, metric = "logLoss")
 ```
 
 
@@ -406,6 +414,7 @@ The Naive Bayes Classifier is a method based on Bayes theorem which assumes that
 
 
 ```{r}
+# Training Naive Bayes Model
 naive_bayes_model <- train(Diabetes_binary ~ HighBP + HighChol + BMI + PhysActivity + Fruits + Veggies + Sex + Age + Smoker + Stroke, data = train, method = "naive_bayes", trControl = ctrl, metric = "logLoss")
 ```
 
@@ -415,89 +424,41 @@ naive_bayes_model <- train(Diabetes_binary ~ HighBP + HighChol + BMI + PhysActiv
 Linear Discriminant Analysis essentially works by finding the best linear combination of features that separates the response variable's classes. We assume that the predictor variables have multivariate normal density with different mean vectors but same covariance matrix for each class in response variable. It can also be used as dimensionality reduction technique.
 
 ```{r}
+# Training LDA model
 lda_model <- train(Diabetes_binary ~ HighBP + HighChol + BMI + PhysActivity + Fruits + Veggies + Sex + Age + Smoker + Stroke, data = train, method = "lda", trControl = ctrl, metric = "logLoss")
 ```
 
+
+
 # Final Model Selection
-Here we will choose the best model based on misclassification rate. The model with the lowest misclassification rate is the chosen as the best model. 
+Here we will choose the best model based on logLoss. The model with the lowest logLoss is  chosen as the best model. 
 
 ```{r}
 # Make our predictions with test set
-LogisticPredicts     <- predict(logistic_best_model, newdata = test)
-LassoPredicts        <- predict(lasso_model, newdata = test)
-ClassTreePredicts    <- predict(classification_tree_model, newdata = test)
-RandomForestPredicts <- predict(random_forest_model, newdata = test)
-BayesPredicts        <- predict(naive_bayes_model, newdata = test)
-LDAPredicts          <- predict(lda_model, newdata = test)
+LogisticPredictsProb     <- predict(logistic_best_model, newdata = test, type = "prob")
+LassoPredictsProb        <- predict(lasso_model, newdata = test, type = "prob")
+ClassTreePredictsProb    <- predict(classification_tree_model, newdata = test, type = "prob")
+RandomForestPredictsProb <- predict(random_forest_model, newdata = test, type = "prob")
+BayesPredictsProb        <- predict(naive_bayes_model, newdata = test, type = "prob")
+LDAPredictsProb         <- predict(lda_model, newdata = test, type = "prob")
 
-# Making classification tables
-LogisticTable      <- table(LogisticPredicts, test$Diabetes_binary)
-LassoTable         <- table(LassoPredicts, test$Diabetes_binary)
-ClassTreeTable     <- table(ClassTreePredicts, test$Diabetes_binary)
-RandomForestTable  <- table(RandomForestPredicts, test$Diabetes_binary)
-BayesTable         <- table(BayesPredicts, test$Diabetes_binary)
-LDATable           <- table(LDAPredicts, test$Diabetes_binary)
+# Calculating log loss values
+logLoss_Logistic <- logLoss(as.numeric(test$Diabetes_binary == "Yes"), LogisticPredictsProb$Yes)
+logLoss_Lasso <- logLoss(as.numeric(test$Diabetes_binary == "Yes"), LassoPredictsProb$Yes)
+logLoss_ClassTree <- logLoss(as.numeric(test$Diabetes_binary == "Yes"), ClassTreePredictsProb$Yes)
+logLoss_RandomForest <- logLoss(as.numeric(test$Diabetes_binary == "Yes"), RandomForestPredictsProb$Yes)
+logLoss_NaiveBayes <- logLoss(as.numeric(test$Diabetes_binary == "Yes"), BayesPredictsProb$Yes)
+logLoss_LDA <- logLoss(as.numeric(test$Diabetes_binary == "Yes"), LDAPredictsProb$Yes)
 
-# Acquiring Misclassiifcation Rate
-LogisticMisclassRate     <- 1-sum(diag(LogisticTable))/sum(LogisticTable)
-LassoMisclassRate        <- 1-sum(diag(LassoTable))/sum(LassoTable)
-ClassTreeMisclassRate    <- 1-sum(diag(ClassTreeTable))/sum(ClassTreeTable)
-RandomForestMisclassRate <- 1-sum(diag(RandomForestTable))/sum(RandomForestTable)
-BayesMisclassRate        <- 1-sum(diag(BayesTable))/sum(BayesTable)
-LDAMisclassRate          <- 1-sum(diag(LDATable))/sum(LDATable)
+# Storing Log Loss Values into dataframe
+LogLoss_Values <- data.frame(Model = c("Logistic", "Lasso", "Classification Tree", "Random Forest", "Naive Bayes", "LDA"), LogLossValue = c(logLoss_Logistic, logLoss_Lasso, logLoss_ClassTree, logLoss_RandomForest, logLoss_NaiveBayes, logLoss_LDA))
+LogLoss_Values
 
-# Want to talk about this on call
-# Another Way to do Misclassification Rate
-# misclassification_rate <- mean(LDAPredicts != test$Diabetes_binary)
+# Getting index of most minimum log loss value
+index_best_model <- which.min(LogLoss_Values$LogLossValue)
 
-# Combine Rats
-MisclassTotals <- 
-  rbind(LogisticMisclassRate,     
-      LassoMisclassRate,    
-      ClassTreeMisclassRate, 
-      RandomForestMisclassRate,
-      BayesMisclassRate,
-      LDAMisclassRate)
-
-smallestRate <- min(MisclassTotals[,1])
-
-if (smallestRate == MisclassTotals[1]) 
-  {
-  
-  final_model <- logistic_best_model
-  print("The final model is the Logisitc Regression Model.")
-  
-} else if(smallestRate == MisclassTotals[2]) 
-  {
-  
-  final_model <- lasso_model
-  print("The final model is the LASSO Regression Model.")
-  
-}  else if(smallestRate == MisclassTotals[3]) 
-  {
-  
-  final_model <- classification_tree_model
-  print("The final model is the Classification Tree Model.")
-  
-} else if(smallestRate == MisclassTotals[4]) 
-  {
-  
-  final_model <- random_forest_model
-  print("The final model is the Random Forest Model.")
-  
-} else if(smallestRate == MisclassTotals[5]) 
-  {
-  
-  final_model <- naive_bayes_model
-  print("The final model is the Naive Bayesian Model.")
-  
-} else if(smallestRate == MisclassTotals[6]) 
-  {
-  
-  final_model <- lda_model
-  print("The final model is the Linear Discriminant Analysis Model.")
-  
-}
+# Printing best model along with value
+cat("The best model is", LogLoss_Values$Model[index_best_model], "with value of", LogLoss_Values$LogLossValue[index_best_model])
 ```
 
 
@@ -527,5 +488,11 @@ This is for rendering all five docs (ignore for now)
 #                output_format = "github_document",
 #                params = x[[2]])
 #       })
+
 ```
+
+```{r}
+
+```
+
 
